Todo Ok a falta de pantalla final

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
   </div>
 
   <script src="js/script.js"></script>
+  <script src="js/game.js"></script>
+  <script src="js/cat.js"></script>
+  <script src="js/obstacle.js"></script>
+  <script src="js/donut.js"></script>
 </body>
 
 </html>
