Pantalla de game over

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Donut Cat Dash</title>
+  <title>Donut Dash</title>
   <link rel="stylesheet" href="style/style.css">
 </head>
 
@@ -18,7 +18,7 @@
     <img src="./images/arrows.png" alt="" class="arrows-img" />
   </div>
 
-  <div id="game-screen" class="screen hidden">
+  <div id="game-screen" class="screeHidden">
     <div id="stats">
       <p id="lives" class="lives">Lives: <span id="numberLives" class="plives">3</span></p>
       <p id="score" class="lives">Score: <span id="numberScore" class="plives">0</span></p>
@@ -28,7 +28,8 @@
     </div>
   </div>
 
-  <div id="game-over-screen" class="screen hidden">
+  <div id="game-over-screen" class="screenHidden">
+    <img src="images/gameOver.gif" alt="cattriste">
     <h1>Game Over</h1>
     <p>Your Score: <span id="final-score">0</span></p>
     <button id="restart-button">Restart</button>
