Mensaje de niveles, pantalla you win

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
     <button id="restart-button">Restart</button>
   </div>
   
+  <div id="level-message" class="level-message"></div>
+
+  <div id="you-win-screen" class="youWin">
+    <h1>You Win</h1>
+    <img src="images/cat2.png" alt="catfeliz">
+    <p>Your Score: <span id="final-score-win">0</span></p>
+    <button id="restart-button-win">Restart</button>
+  </div>
 
   <script src="js/script.js"></script>
   <script src="js/game.js"></script>
