Por comprobar el mensaje de nivel 2 y 3 que parpadean

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="start-screen" class="screen">
+  <div id="start-screen" class="startScreen">
     <h1>Donut Dash</h1>
     <img src="images/garfield-index-removebg-preview.png" alt="" class="logo-img" />
     <br />
@@ -18,13 +18,10 @@
     <img src="./images/arrows.png" alt="" class="arrows-img" />
   </div>
 
-  <div id="game-screen" class="screeHidden">
+  <div id="game-screen" class="gameScreen">
     <div id="stats">
       <p id="lives" class="lives">Lives: <span id="numberLives" class="plives">3</span></p>
       <p id="score" class="lives">Score: <span id="numberScore" class="plives">0</span></p>
-    </div>
-    <div id="game-area">
-      <div id="cat"></div>
     </div>
   </div>
 
@@ -34,10 +31,10 @@
     <p>Your Score: <span id="final-score">0</span></p>
     <button id="restart-button">Restart</button>
   </div>
-  
+
   <div id="level-message" class="level-message"></div>
 
-  <div id="you-win-screen" class="youWin">
+  <div id="you-win-screen" class="youWinScreen">
     <h1>You Win</h1>
     <img src="images/cat2.png" alt="catfeliz">
     <p>Your Score: <span id="final-score-win">0</span></p>
