--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="start-screen" class="startScreen">
     <h1>Donut Dash</h1>
-    <img src="images/garfield-index-removebg-preview.png" alt="" class="logo-img" />
+    <img src="images/garfieldIndex.png" alt="" class="logo-img" />
     <br />
     <button id="start-button">Start Game</button>
     <p>Use the left and right arrow to control the cat!</p>
